kubernetes-templates/wordpress/0/wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-${cluster_name}
  labels:
    app: mysql-${cluster_name}
spec:
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    app: mysql-${cluster_name}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql-${cluster_name}
  labels:
    app: mysql-${cluster_name}
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-${cluster_name}
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
      #   volumeMounts:
      #   - name: mysql-persistent-storage
      #     mountPath: /var/lib/mysql
      # volumes:
      # - name: mysql-persistent-storage
      #   persistentVolumeClaim:
      #     claimName: mysql-pv-claim
        volumeMounts:
          - name: mysql
            mountPath: "/var/lib/mysql"
      volumes:
        - name: mysql
          nfs:
            server: ${nfs_server_ip}
            path: "/nfs/exports/kube-mysql-${cluster_name}"
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-${cluster_name}
  labels:
    app: wordpress-${cluster_name}
spec:
  ports:
  - name: wordpress
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: wordpress-${cluster_name}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-${cluster_name}
  labels:
    app: wordpress-${cluster_name}
spec:
  strategy:
    type: RollingUpdate
  replicas: ${wordpress_replicas}
  template:
    metadata:
      labels:
        app: wordpress-${cluster_name}
    spec:
      containers:
      - image: wordpress:4.4-apache
        name: wordpress-${cluster_name}
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
          - name: wordpress
            mountPath: "/var/www/html"
      volumes:
        - name: wordpress
          nfs:
            server: ${nfs_server_ip}
            path: "/nfs/exports/kube-wordpress-${cluster_name}"
            readOnly: false
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-lb-${cluster_name}
  annotations:
    scale: "1"
    http.port: "${wordpress_port}"
spec:
  backend:
    serviceName: wordpress-${cluster_name}
    servicePort: 80

# kubectl create -f wordpress.yaml --record
# kubectl get deployments
# kubectl get rs
# kubectl get pods --show-labels
# kubectl scale deployment/wordpress --replicas=4
# kubectl edit deployment/wordpress
# kubectl set image deployment/wordpress wordpress=wordpress:4.5-apache
# kubectl set image deployment/wordpress wordpress=wordpress:4.6.1-apache
# kubectl rollout pause deployment/wordpress
# kubectl rollout resume deployment/wordpress
# kubectl rollout status deployment/wordpress
# kubectl rollout undo deployment/wordpress
# kubectl rollout undo deployment/wordpress --to-revision=1
# kubectl rollout history deployment/wordpress
# kubectl rollout history deployment/wordpress --revision=3
